minio/minio-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: default
spec:
  type: ExternalName
  externalName: minio-proj.minio-ns.svc.cluster.local
