minio/minio-external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Specify the ingress class
    nginx.ingress.kubernetes.io/rewrite-target: /  # Rewrite to root
    nginx.ingress.kubernetes.io/proxy-body-size: 10m  # Adjust for large requests
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /minio
            pathType: Prefix
            backend:
              service:
                name: minio-proj  # Service name in minio-ns namespace
                port:
                  number: 9000  # Port exposed by the minio-proj service
